syntax = "proto3";
package proto.packet;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

import "discord.proto";
import "models.proto";

message Acknowledgement {
  enum AcknowledgementType {
    MessageReceived = 0;
    FileDownloaded = 1;
  }

  string packet_id = 1;
  AcknowledgementType type = 2;
}

message Command {
  enum CommandTypes {
    Heartbeat = 0;
    ReturnToMenu = 1;
    ScreenOverlay_ShowPng = 2;
    ScreenOverlay_ShowGreen = 3;
    DelayTest_Finish = 4;
  }

  CommandTypes command_type = 1;
}

message Connect {
  models.User.ClientTypes client_type = 1;
  string name = 2;
  string password = 3;
  string user_id = 4;
  int32 client_version = 5;
}

message Response {
  enum ResponseType {
    Fail = 0;
    Success = 1;
  }

  ResponseType type = 1;
  string message = 2;
}

message ConnectResponse {
  Response response = 1;
  models.User self = 2;
  models.State state = 3;
  int32 server_version = 4;
}

message File {
  enum Intentions {
    None = 0;
    SetPngToShowWhenTriggered = 1; //Image will be stored in the StreamSyncController and displayed when the DelayTest_Trigger command is received
    ShowPngImmediately = 2; //Image will be immediately displayed if the StreamSyncController is active
  }

  string file_id = 1;
  Intentions intent = 2;
  bool compressed = 3;
  bytes data = 4;
}

message LoadedSong {
  models.PreviewBeatmapLevel level = 1;
}

message Event {
  message UserAddedEvent {
    models.User user = 1;
  }

  message UserUpdatedEvent {
    models.User user = 1;
  }

  message UserLeftEvent {
    models.User user = 1;
  }

  message MatchCreatedEvent {
    models.Match match = 1;
  }

  message MatchUpdatedEvent {
    models.Match match = 1;
  }

  message MatchDeletedEvent {
    models.Match match = 1;
  }

  message QualifierCreatedEvent {
    models.QualifierEvent event = 1;
  }

  message QualifierUpdatedEvent {
    models.QualifierEvent event = 1;
  }

  message QualifierDeletedEvent {
    models.QualifierEvent event = 1;
  }

  message HostAddedEvent {
    models.CoreServer server = 1;
  }

  message HostDeletedEvent {
    models.CoreServer server = 1;
  }

  oneof changed_object {
    UserAddedEvent user_added_event = 1;
    UserUpdatedEvent user_updated_event = 2;
    UserLeftEvent user_left_event = 3;
    MatchCreatedEvent match_created_event = 6;
    MatchUpdatedEvent match_updated_event = 7;
    MatchDeletedEvent match_deleted_event = 8;
    QualifierCreatedEvent qualifier_created_event = 9;
    QualifierUpdatedEvent qualifier_updated_event = 10;
    QualifierDeletedEvent qualifier_deleted_event = 11;
    HostAddedEvent host_added_event = 12;
    HostDeletedEvent host_deleted_event = 13;
  }
}

message LoadSong {
  string level_id = 1;
  string custom_host_url = 2;
}

message PlaySong {
  models.GameplayParameters gameplay_parameters = 1;
  bool floating_scoreboard = 3;
  bool stream_sync = 4;
  bool disable_fail = 5;
  bool disable_pause = 6;
  bool disable_scoresaber_submission = 7;
  bool show_normal_notes_on_stream = 8;
}

message SubmitScore {
  models.Score score = 1;
}

message SongFinished {
  enum CompletionType {
    Passed = 0;
    Failed = 1;
    Quit = 2;
  }

  models.User player = 1;
  models.Beatmap beatmap = 2;
  CompletionType type = 3;
  int32 score = 4;
}

message SendBotMessage {
  discord.Channel channel = 1;
  string message = 2;
}

message ScoreRequestResponse {
  repeated models.Score scores = 1;
}

message ScoreRequest {
  string event_id = 1;
  models.GameplayParameters parameters = 2;
}

message Packet {
  string id = 1;
  string from = 2;
  oneof packet {
    Acknowledgement acknowledgement = 3;
    Command command = 4;
    Connect connect = 5;
    Response response = 6;
    ConnectResponse connect_response = 7;
    File file = 8;
    LoadedSong loaded_song = 9;
    Event event = 10;
    LoadSong load_song = 11;
    PlaySong play_song = 12;
    SubmitScore submit_score = 13;
    SongFinished song_finished = 14;
    SendBotMessage send_bot_message = 15;
    ScoreRequestResponse score_request_response = 16;
    ScoreRequest score_request = 17;
    ForwardingPacket forwarding_packet = 18;
    Message message = 19;
    MessageResponse message_response = 20;
  }
}

message ForwardingPacket {
  repeated string forward_to = 1;
  Packet packet = 2;
}

message Message {
    string id = 1;
    string message_title = 2;
    string message_text = 3;
    bool can_close = 4;
    models.MessageOption option_1 = 5;
    models.MessageOption option_2 = 6;
}

message MessageResponse {
    string packet_id = 1;
    string value = 2;
}